src/sma-client/app/views/games/styles/leksa.styl
#leksa

    #question_play
        img
            width: 32px
            height: 32px

    .concept_img_span
        display: block
        overflow: hidden
        background-position: cover

    #leksa_question
        z-index: 5

        hr
            margin-bottom: .5em
            margin-top: .25em

    .question_type h3
        font-weight: lighter
        font-size: 140%
        margin-bottom: 0

    span.question_level
        float: right
        display: block
        border-radius: 90px
        background-color: #ccc
        color: #000


    .post_game_buttons
        position: relative
        float: right
        right: 10px

    .question_prompt
        position: relative
        display: block
        height: 100%
        width: 100%
        margin: 2em auto 0 auto
        font-family: "Open Sans"

        .concept_img_span.img_concept
            display: block
            margin: 0 auto
            width: 300px
            height: 300px
            background-size: 300px 300px

        .word_concept
            display: block
            width: 100%
            margin: 0 auto
            height: 1.5em
            font-size: 200%
            margin: 0 auto 1em auto
            text-align: center
            background-color: #444
            padding-bottom: 7px
            border-radius: 25px
            text-shadow: none
            color: #FFF
            font-weight: lighter

    .word_to_image
        .question_prompt
            margin: .5em 0 0 0

        #question_play
            margin: 0 0 0 0
            padding: 0 0 0 0


    #question_play
        display: block
        width: 100%
        position: relative
        z-index: 5

        text-decoration: none
        font-weight: lighter
        padding: 10px
        text-align: center

        .concept_img_span
            margin: 0 auto
            opacity: .8

    .one_image

        .img_concept
            display: block
            border-radius: 15%
            overflow: hidden !important
            box-sizing: border-box

            position: relative
            margin: 0 auto
            width: 100%
            height: 100%
            padding: 0 0 0 0

            .concept_img_span
                padding: 0 0 0 0
                margin: 0 0 0 0
                display: block
                border: 3px double #555
                box-sizing: border-box
                overflow: hidden
                border-radius: 15%
                background-size: 100% 100%
                background-repeat: no-repeat

        a.answerlink
            width: 70%
            display: block
            margin: 0 auto 1em auto

            color: #FFF
            font-size: 150%
            color: #FFF !important
            text-align: center
            background-color: #444
            border-radius: 25px
            text-shadow: none
            font-weight: 100


    .word_to_image

        .correct .img_concept .concept_img_span
            border: 3px double #090

        .incorrect .img_concept .concept_img_span
            border: 3px double #900

        ul.image-grid
            display: block

            margin: 0 auto 0 auto
            padding: 0 0 0 0

            list-style-type: none

        .image-item

            float: left
            display: block
            margin: 0 auto

        .img_concept
            display: block
            padding: 2px

            border-radius: 15px

            .concept_img_span
                border: 3px double #555
                border-radius: 20px
                box-sizing: border-box
                width: 100%
                height: 100%
                background-size: 100% 100%

        .img_concept.no_frame
            border: none
            background-image: none

            .concept_img_span
                border: none


    .image_set

        display: block
        margin: 0 auto

        .correct
            color: #3A3

            .tint .concept_img_span
              background-color: #090

            .concept
              opacity: 1


        .incorrect
            color: #A33

            .tint .concept_img_span
              background-color: #900

            .concept
              opacity: 1


    .word_set

        // background shading
        .answerlink.incorrect
            background-color: rgba(170, 51, 51, 0.7)

        .answerlink.correct
            background-color: rgba(51, 170, 51, 0.7)

        .correct
            color: #3A3

            .concept
              color: #151

        .incorrect
            color: #A33

            .concept
              color: #311

    // a.answerlink.incorrect:after
    //     content: " Incorrect!"
    //     background-color: transparent

    #progress_container
        display: block
        position: fixed
        bottom: 0px
        left: 0px
        height: 10px
        width: 100%

        border-radius: 0px
        padding: 0 0 0 0
        margin: 0 0 0 0

        div
            height: 1em
            background-color: transparent

        .progress_label
            display: none
            float: right
            text-shadow: 0 0 3px #FFF
            font-size: 80%

        #leksa_progress
            position: relative
            top: -1.15em
            border-radius: 0px

            .ui-progressbar-value
                background-color: #933

        #leksa_progress_indiv
            position: relative
            top: 0em
            border-radius: 0px

            .ui-progressbar-value
                background-color: #339


    #points_for_question
        spacing = 50px

        padding: 0 0 0 0
        position: fixed
        top: spacing
        left: spacing
        width: spacing
        height: spacing
        background-color: #4C4
        box-shadow: 0px 0px 5px #FFF

        border-radius: 90px
        display: block
        vertical-align: center
        text-align: center
        text-indent: none;

        .points

            color: #FFF
            font-weight: 300
            font-size: 22px
            letter-spacing: 0px
            line-height: 50px
            margin: 0 0 0 0
            padding: 0 0 0 0
            width: 48px
            text-align: center
            display: block
            text-shadow: none


    // Now we need some responsive fixes for stuff

    @media only screen and (max-width: 390px)
        box_size = 275
        img_box_size = (275/2)px
        img_padding = 18
        img_size = ((box_size - img_padding)/2)px
        third_padding = (240/2/2)px

        .word_to_image
            .question_prompt
                margin: .75em auto .5em auto
                font-family: "Open Sans"
                height: 45px

        ul.image-grid
            width: (box_size)px
            margin-bottom: 2em

        .grid-2
            height: ((box_size/2))px

        .image-grid-group
            margin-top: 8px

        // use box width to auto-determine margins
        .image-item
            width: img_box_size
            height: @width

        // set the image size
        .img_concept
            display: block
            margin: 0 auto
            width: img_size
            height: img_size
            background-size: @width @width
            padding: 0

        .one_image

            w = 175px

            .img_concept
                width: w
                height: w

                .concept_img_span
                    width: w
                    height: w
                    background-size: w w

    @media only screen and (min-width: 391px) and (max-width: 499px)
        box_size = 400
        img_box_size = (400/2)px
        img_padding = 25
        img_size = ((box_size - img_padding)/2)px
        third_padding = (240/2/2)px

        ul.image-grid
            width: 100%

        .grid-2
            height: ((box_size/2))px

        .image-item
            width: 50%
            height: inherit
            box-sizing: border-box
            background-size: 100% 100%

        .img_concept
            display: block
            margin: 0 auto
            width: 90%
            height: 90%
            background-size: 100% 100%
            padding: 0

        .one_image
            w = 200px

            .img_concept
                width: w
                height: w

                .concept_img_span
                    width: w
                    height: w
                    background-size: w w


    @media only screen and (min-width: 500px) and (max-width: 749px)
        box_size = 500
        img_box_size = (box_size/2)px
        img_padding = 25
        img_size = ((box_size - img_padding)/2)px

        ul.image-grid
            width: 100%

        .grid-2
            height: (box_size/2)px

        .image-item
            width: 50%
            height: inherit
            box-sizing: border-box
            background-size: 100% 100%

        .img_concept
            display: block
            margin: 0 auto
            width: 90%
            height: 90%
            background-size: 100% 100%
            padding: 0

        .one_image
            w = 300px

            .img_concept
                width: w
                height: w

                .concept_img_span
                    width: w
                    height: w
                    background-size: w w

    // iPad: 768 x 927
    @media only screen and (min-width: 750px)
    
        .question_prompt .word_concept
            width: 70%

        #question_play
            img
                width: 64px
                height: 64px

        #question_play.highlight
            img
                padding: 7px
                border-radius: 50%
                border: 3px solid #FFF
                background-color: #3A3

        .one_image .question_prompt
            margin-bottom: 3em

        box_size = 600
        img_box_size = (box_size/2)px
        img_padding = 25
        img_size = ((box_size - img_padding)/2)px

        .image-grid-group
            margin-top: 15px

        .image-grid-group.grid-total-2
            margin-top: 50px
            margin-bottom: 50px

        ul.image-grid
            display: block
            width: (box_size)px
            margin: 0 auto

        .grid-2
            height: ((box_size/2))px

        .image-item
            width: 300px
            height: 300px
            box-sizing: border-box
            background-size: 100% 100%

        .img_concept
            display: block
            margin: 0 auto
            width: 90%
            height: 90%
            background-size: 100% 100%
            padding: 0

        .grid-1
            margin-top: 100px !important
            margin-bottom: 85px

        .question_prompt

            .word_concept
                font-size: 300%
                border-radius: 50px

        #question_play
            padding-top: 20px !important

            .concept_img_span
                height: 64px !important
                width: @height

        .one_image
            a.answerlink
                font-size: 250%
                padding-top: 5px
                padding-bottom: 6px
                border-radius: 50px

        .one_image
            w = 400px

            .img_concept
                width: w
                height: w

                .concept_img_span
                    width: w
                    height: w
                    background-size: w w

